connected with WS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,7 +94,7 @@
     </svg>
   </div>
 
-  <router-outlet></router-outlet>
+  <app-room></app-room>
   <svg
     id="clouds"
     alt="Gray Clouds Background"
