--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -1,19 +1,15 @@
 <p>room works!</p>
-
 <div class="card card-small" tabindex="0">
   <div style="display: 'flex'; flex-wrap: 'wrap'">
     <div style="display: 'flex'; flex-direction: 'column'">
-      <video muted [srcObject]="refVideo" autoPlay playsInline></video>
+      <video
+        muted="true"
+        [srcObject]="refVideo"
+        *ngIf="show"
+        autoPlay
+        playsInline
+      ></video>
+      <button (click)="toggleShow()">show?</button>
     </div>
-
-    <!-- {peers.map((peer, index) => {
-          return (
-            <Video
-              key={peersRef.current[index].peerId}
-              peer={peer.peerObj}
-              name={peersRef.current[index].name}
-            />
-          );
-        })} -->
   </div>
 </div>
