Chat with rooms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,7 +94,7 @@
     </svg>
   </div>
 
-  <app-room></app-room>
+  <app-chat [room]="roomId"></app-chat>
   <svg
     id="clouds"
     alt="Gray Clouds Background"
