--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,14 @@
   font-size: 14px;
   color: #333;
 }
+.chat {
+  left: 0px;
+  top: 130px;
+  position: absolute;
+}
+.call {
+  width: 55%;
+  left: 410px;
+  top: 130px;
+  position: absolute;
+}
