p2p video 2 user only

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,7 +1,7 @@
 <div class="chat">
   <div class="chat-header clearfix">
     <div class="chat-about">
-      <div class="chat-with">{{ room }}</div>
+      <div class="chat-with">{{ id }}</div>
     </div>
   </div>
 
