--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,9 +94,9 @@
     </svg>
   </div>
   <h3>{{ id }}</h3>
-  <!-- <div class="chat">
+  <div class="chat">
     <app-chat [room]="roomId"></app-chat>
-  </div> -->
+  </div>
   <div class="call">
     <app-call [room]="roomId"></app-call>
   </div>
