--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,36 +14,11 @@
     ></app-chat>
   </aside>
   <main class="main">
-    <div class="placeholder" *ngIf="room === ''">
-      <div class="form__group field" *ngIf="name === ''">
-        <input
-          type="input"
-          class="form__field"
-          placeholder="Whats your name?"
-          name="name"
-          id="name"
-          required
-          [value]="_name"
-          (input)="_name = $event.target.value"
-        />
-        <label for="name" class="form__label">Whats your name?</label>
-        <button (click)="setName(_name)">🐱‍💻</button>
-      </div>
-      <div class="form__group field" *ngIf="name !== ''">
-        <input
-          type="input"
-          class="form__field"
-          placeholder="Whats your name?"
-          name="room"
-          id="room"
-          required
-          [value]="_room"
-          (input)="_room = $event.target.value"
-        />
-        <label for="room" class="form__label">Enter Room Name</label>
-        <button (click)="setRoom(_room)">👨‍👩‍👧‍👦</button>
-      </div>
-    </div>
+    <app-join
+      *ngIf="room === ''"
+      (saveName)="setName($event)"
+      (saveRoom)="setRoom($event)"
+    ></app-join>
 
     <app-meeting *ngIf="room !== ''" [events]="meeting$ | async"></app-meeting>
   </main>
