testes successfully with FF | EDGE | CHROME

--- a/src/app/meeting/meeting.component.html
+++ b/src/app/meeting/meeting.component.html
@@ -1,25 +1,29 @@
+<div *ngIf="localStream">
+  <button (click)="muteMyself()">🙊</button>
+  <button (click)="startCall()">📞</button>
+  <button (click)="videoStartStop()">🙈</button>
+</div>
 <div class="video-grid">
-  <label *ngIf="remoteStreams.length === 0" (click)="startCall()"> 📞 </label>
   <div class="video-card" *ngIf="localStream">
     <video
       id="me"
       height="190"
       width="257"
       [srcObject]="localStream"
+      muted="true"
       autoplay
-      muted
     ></video>
     <div class="user-name">{{ name }}</div>
   </div>
-  <div class="video-card" *ngFor="let peer of remoteStreams">
+  <div class="video-card" *ngFor="let peer of peers | keyvalue">
     <video
       id="me"
       height="190"
       width="257"
-      [srcObject]="peer.stream"
+      [srcObject]="peer.value.stream"
       autoplay
       muted
     ></video>
-    <div class="user-name">{{ peer.call.username }}</div>
+    <div class="user-name">{{ peer.value.name }}</div>
   </div>
 </div>
